# cookieblues.github.io

./: .gitignore  Gemfile  Makefile  _config.yml  about.html  create_local.sh  index.html  model-methodology.html  om.html  polls.html  pyproject.toml
_data/: details.yml  navigation.yml  sidebar.yml
_includes/: footer-post.html  footer.html  head.html  header.html  pygment.scss  sidebar.html  social-icon.html  style.scss
_layouts/: category.html  cats.html  default.html  post.html
_posts/: 18-10-25-bslialo-notes-9a.md  19-01-17-itu-eval-part-01.md  19-04-04-bare-minimum-latex.md  19-09-23-a-look-at-machine-learning.md  19-09-23-bsmalea-notes-1a.md  19-11-26-bsmalea-notes-1b.md  19-12-02-bsmalea-notes-2.md  20-01-31-how-to-do-data-science-without-machine-learning.md  2019-04-04-bare-minimum-latex.md  2020-01-31-how-to-do-data-science-without-machine-learning.md  2021-01-11-pcc-and-cosine-similarity.md  2021-02-10-bare-minimum-matplotlib.md  2021-03-08-bsmalea-notes-1a.md  2021-03-11-bsmalea-notes-1b.md  2021-03-15-bsmalea-notes-1c.md  2021-03-22-bsmalea-notes-2.md  2021-03-23-bsmalea-notes-3a.md  2021-03-30-bsmalea-notes-3a.md  2021-04-01-bsmalea-notes-3b.md
_sass/: blog.scss  elements.scss  forms.scss  pygment.scss  sidebar.scss  style.scss
_site/: 404.html  feed.xml  index.html  (+6 more)
_site/polling/: config.py  fix_polls.py  fixed_polls.csv  jackman2005.stan  polls.csv  pyproject.toml  run.py
_site/polling/data/processed/: fixed_polls.csv  mean_polls.csv  mean_polls_raw.csv
_site/polling/scripts/: 01_run_jackman2005.py  02_run_dirichlet.py  05_clean_gaussian.py
(+212 files in other folders)
