[tool.poetry]
name = "polling"
version = "0.1.0"
description = ""
authors = ["cookieblues <shro@itu.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
numpy = "^1.20.1"
pystan = "^2.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
